--- a/package.json
+++ b/package.json
@@ -9,11 +9,8 @@
     "watch": "gulp watch",
     "test": "gulp test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/huytd/agar.io-clone.git"
-  },
-  "author": "Huy Tran",
+ 
+  "author": "ULBear",
   "license": "MIT",
   "contributors": [
     "abalabahaha <hi@abal.moe> (https://github.com/abalabahaha)",
